FEAT: Documentação do usuário
